<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain"
    android:background="@drawable/background_image">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10sp">
            <ImageView
                android:id="@+id/front_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="250sp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="25sp"
                />
            <Button
                android:id="@+id/edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/edit_your_profile"/>
            <Button
                android:id="@+id/edit_menu_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/edit_menu_item"/>
            <Button
                android:id="@+id/edit_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/edit_categories"/>
            <Button
                android:id="@+id/add_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/add_category"/>
            <Button
                android:id="@+id/add_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/add_menu"/>
            <Button
                android:id="@+id/view_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25sp"
                android:background="@drawable/rounded_button_blue"
                android:textColor="#fff"
                android:text="@string/view_your_menu"/>
            </LinearLayout>
    </ScrollView>
</RelativeLayout>