<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ActivityLogin"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/eateryfinderlogo"
        android:minHeight="200sp"
        android:maxHeight="240sp"
        android:adjustViewBounds="true"/>

    <EditText
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/establishment_user"
        android:textColorHint="#fff"
        android:padding="20sp"
        android:inputType="text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_login"
        android:layout_centerHorizontal="true"
        android:maxWidth="400sp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        android:padding="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/login_button_text"/>

</RelativeLayout>