<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:src="#000"/>

            <EditText
                android:id="@+id/est_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="20sp"
                android:background="@drawable/text_background_design"
                android:hint="@string/est_name"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                android:inputType="textCapSentences|textCapWords"
                />

            <EditText
                android:id="@+id/est_address_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:hint="@string/establishment_address"
                android:inputType="textCapSentences|textCapWords|textPostalAddress|textMultiLine"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <EditText
                android:id="@+id/latitude_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:hint="@string/establishment_latitude"
                android:inputType="numberDecimal"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <EditText
                android:id="@+id/longitude_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:hint="@string/establishment_longitude"
                android:inputType="numberDecimal"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <Spinner
                android:id="@+id/emotion_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                android:entries="@array/emotion_item"
                />
            <Spinner
                android:id="@+id/age_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                android:entries="@array/age_range"
                />
            <Spinner
                android:id="@+id/est_type_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/front_store_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="250sp"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="25sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="10sp"/>
                <!--<Button-->
                    <!--android:id="@+id/take_photo"-->
                    <!--android:padding="15sp"-->
                    <!--android:text="@string/take_photo"-->
                    <!--android:layout_marginLeft="15sp"-->
                    <!--android:layout_marginRight="15sp"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:drawableLeft="@drawable/ic_photo_camera"/>-->
                <Button
                    android:id="@+id/select_image"
                    android:text="@string/choose_photo_from_gallery"
                    android:padding="15sp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_photos_selection"/>
            </LinearLayout>
            <Button
                android:id="@+id/submit_edited_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_button_green"
                android:text="@string/submit"
                android:textColor="#FFF"
                android:layout_marginBottom="15sp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>