<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_background_layout_popup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/item_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <EditText
                android:id="@+id/current_item_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:hint="@string/current_item_name"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <Spinner
                android:id="@+id/item_category_choose_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <EditText
                android:id="@+id/price_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/item_picture_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="250sp"
                    android:adjustViewBounds="true"
                    android:layout_marginRight="25sp"
                    android:layout_marginLeft="25sp"
                    android:layout_marginTop="10sp"/>

                <Button
                    android:id="@+id/select_image_item_edit"
                    android:text="@string/choose_photo_from_gallery"
                    android:padding="15sp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_photos_selection"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/item_status_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/text_background_design"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:padding="15sp"
                android:entries="@array/status"/>
            <Button
                android:id="@+id/submit_edited_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/rounded_button_green"
                android:text="@string/submit"
                android:textColor="#FFF"
                android:layout_marginBottom="15sp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>